# Chip8-UI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chip8audio.cpp  chip8audio.h  chip8display.cpp  chip8display.h  chip8input.cpp  chip8input.h  displaydialog.cpp  displaydialog.h  keyboardtestdialog.cpp  keyboardtestdialog.h  languagedialog.cpp  languagedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quirksdialog.cpp  quirksdialog.h  resources.qrc
core/: CMakeLists.txt
core/include/: Chip8.hpp  Display.hpp  Keyboard.hpp  Memory.hpp
core/include/api/: EmulatorAPI.hpp  IAudio.hpp  IDisplay.hpp  IInput.hpp
core/src/: Chip8.cpp  Display.cpp  Keyboard.cpp  Memory.cpp
core/src/api/: EmulatorAPI.cpp
translations/: Chip8-UI_en_US.ts  Chip8-UI_es.ts
